deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatehouse
  namespace: gate
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - gatehouse.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: gatehouse
          port: 80
